Remove invalid method overload which confuses the QML engine

Related to QTBUG-87616

Change-Id: I4752364d85fb1057e5778e14ba4576815e6246e3
Reviewed-by: Pekka Vuorela <pvuorela@iki.fi>